--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 * {
+  margin: 0;
+
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -7,6 +9,8 @@ body {
   margin: 0;
   padding: 20px;
   background-color: #eaf1fb;
+  height: 100%;
+  width: 100%;
 }
 
 h1 {
@@ -117,6 +121,7 @@ button:hover {
   padding: 15px 30px;
   border-radius: 10px;
   width: 950px;
+  
   
 }
 
